2005-12-29  Abel Cheung  <maddog@linuxhall.org>

	* configure.in: Added "ca" "da" "mk" "ru" "vi" "zh_HK" to ALL_LINGUAS.

2005-11-29  Sushma Rai  <rsushma@novell.com>

	* configure.in : Bumped the version to 2.4.2
	* NEWS : Updated

2005-11-28  Sarfraaz Ahmed  <asarfraaz@novell.com>

	* calendar/e-cal-backend-exchange-calendar.c (modify_object_with_href):
	Fetch the recurring instance from the cache.
	(receive_objects) : Remove the instance from the master object in the
	cache.
	
	* calendar/e-cal-backend-exchange.c (e_cal_backend_exchange_add_object):
	Remove the instance from the master object while adding the detatched
	instance.
	(discard_detached_instance): Similar.
	(add_instances_to_vcal) : Added new. Adds the detatched instances to
	the top level vcalendar object.
	(get_object) : Modified to return the detatched instance when the rid 
	is requested. 
	Fixes #235580.

2005-11-24  Sushma Rai  <rsushma@novell.com>

	* storage/Makefile.am: Removed unused exchange-oof.[ch]

	* storage/exchange-component.c (idle_do_interactive)
	(exchange_component_is_interactive): Removed.
	(impl_interactive): Having just the stub.
	(config_listener_account_created): Not calling oof_init here also.
	ExchangeComponentPrivate: Removed unused variable xid.

	* storage/main.c: Not including exchange-oof.h

2005-10-27  Theppitak Karoonboonyanan  <thep@linux.thai.net>

	* configure.in: Added 'th' (Thai) to ALL_LINGUAS.

2005-10-21  Sarfraaz Ahmed <asarfraaz@novell.com>

	* addressbook/e-book-backend-exchange.c 
	(e_book_backend_exchange_remove) : Check for the proper return values
	from the server and return the appropriate status back.
	* calendar/e-cal-backend-exchange.c (remove_calendar) : Similar
	* mail/mail-stub-exchange.c (delete_folder) : Similar
	This fixes #312848.

2005-10-04  Sarfraaz Ahmed <asarfraaz@novell.com>

	* configure.in : Bumped the version to 2.4.1
	* NEWS : Updated

2005-10-03  Sarfraaz Ahmed <asarfraaz@novell.com>
