@@ -36,6 +36,10 @@ BASE_VERSION=$EVOLUTION_API_VERSION
 AC_DEFINE_UNQUOTED(BASE_VERSION, "$BASE_VERSION", Connector base version)
 AC_SUBST(BASE_VERSION)
 
+API_VERSION=$EDS_API_VERSION
+AC_DEFINE_UNQUOTED(API_VERSION, "$API_VERSION", Eds api version)
+AC_SUBST(API_VERSION)
+
 dnl Initialize maintainer mode
 AM_MAINTAINER_MODE
 
