@@ -38,12 +38,12 @@
 -->
 </oaf_server>
 
-<oaf_server iid="OAFIID:GNOME_Evolution_Exchange_Connector_BookFactory:@BASE_VERSION@"
+<oaf_server iid="OAFIID:GNOME_Evolution_Exchange_Connector_BookFactory:@API_VERSION@"
             type="exe"
             location="@CONNECTOR_PATH@/evolution-exchange-storage">
 
 	<oaf_attribute name="repo_ids" type="stringv">
-		<item value="IDL:GNOME/Evolution/DataServer/BookFactory:1.4"/>
+		<item value="IDL:GNOME/Evolution/DataServer/BookFactory:@API_VERSION@"/>
 		<item value="IDL:Bonobo/Unknown:1.0"/>
 	</oaf_attribute>
 
@@ -56,12 +56,12 @@
         </oaf_attribute>
 </oaf_server>
 
-<oaf_server iid="OAFIID:GNOME_Evolution_Exchange_Connector_CalFactory:@BASE_VERSION@"
+<oaf_server iid="OAFIID:GNOME_Evolution_Exchange_Connector_CalFactory:@API_VERSION@"
             type="exe"
             location="@CONNECTOR_PATH@/evolution-exchange-storage">
 
 	<oaf_attribute name="repo_ids" type="stringv">
-		<item value="IDL:GNOME/Evolution/DataServer/CalFactory:1.4"/>
+		<item value="IDL:GNOME/Evolution/DataServer/CalFactory:@API_VERSION@"/>
 		<item value="IDL:Bonobo/Unknown:1.0"/>
 	</oaf_attribute>
 
